# echo_bot

./: CMakeLists.txt  CMakePresets.json  Kconfig  README.md  README.rst  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf  sample.yaml
boards/: memo.txt  nrf5340dk_nrf5340_cpuapp.overlay
drivers/: CMakeLists.txt
drivers/my_i2c_mcp9808/: CMakeLists.txt  Kconfig  my_i2c_mcp9808.c  my_i2c_mcp9808.h
drivers/my_uart_peripheral/: CMakeLists.txt  Kconfig  api.h  driver.c
drivers/my_uart_peripheral_b/: CMakeLists.txt  Kconfig  my_uart_peripheral_b.c  my_uart_peripheral_b_api.h
dts/bindings/: memo.txt  mycompany,my_i2c_mcp9808.yaml  mycompany,my_uart_peripheral.yaml  mycompany,my_uart_peripheral_b.yaml
src/: http_get.c  main.c  main_app.c  main_cdc_acm.c  main_cdc_acm_composite.c  main_dhcpv4_client.c  main_echo_bot.c  main_mcp9808.c  main_my_uart_peripheral.c  main_my_uart_peripheral_b.c  main_shell_module.c  socket_dumb_http.c
